--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,134 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.main{
+    position: relative;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.button{
+    min-width: 100px;
+    min-height: 80px;
+}
+
+.btn-create{
+    width: 100%;
+    display: flex;
+    justify-content: start;
+}
+
+.btn-create button{
+    margin: 2rem;
+    min-width: 100px;
+    min-height: 50px;
+}
+
+h1{
+    text-align: center;
+}
+
+.done{
+    color: rgba(61, 255, 0, 1);
+}
+
+.err{
+    color: red;
+}
+
+
+.form,.ctn-info,.wrap,.img,.btn-input{
+    display: flex;
+}
+
+h1{
+    font-size: 40px;
+    margin: 3rem;
+}
+
+.create-new-user,.update-user{
+    position: relative;
+    flex-direction: column;
+    padding: 2rem;
+}
+
+
+.wrap,.img{
+    flex-direction: column;
+}
+.wrap{
+    margin: 1rem;
+}
+.form{
+    justify-content: center;
+    align-items: center;
+}
+
+.img,.ctn-info{
+    width: 50%;
+    justify-content: center;
+    margin:auto;
+}
+.img{
+    align-items: center;
+}
+.img img{
+    max-width: 200px;
+    max-height: 200px;
+}
+
+
+.btn-input{
+    justify-content: center;
+}
+
+.btn-input button{
+    min-width: 140px;
+    min-height: 50px;
+    margin: 1rem;
+}
+
+
+.success,.load,.error{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+}
+
+table {
+    width: 95%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .confirmar,.success{
+    position: absolute;
+    top: 0;
+    background: rgba(175, 182, 203, 0.46);
+    height: 100vh;
+    width:100%;
+  }
+
+  .btn-conf,.ctn-confirmar,.confirmar,.success{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  .ctn-confirmar{
+    flex-direction: column;
+    background: #fff;
+    padding: 2rem;
+    border-radius: 5px;
+  }
+  .btn-conf{
+    flex-direction: row;
+  }
